<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:textAlignment="center"
                android:textSize="34sp"
                tools:ignore="Suspicious0dp" />

<!--            <SearchView-->
<!--                android:id="@+id/searchView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:onClick="searchView"-->
<!--                android:queryHint="Search ........." />-->

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="Suspicious0dp,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/section"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="Suspicious0dp,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone_no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="Suspicious0dp,TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/rollNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/roll_no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                tools:ignore="Suspicious0dp,VisualLintTextFieldSize" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="1dp"
                android:minHeight="48dp"
                tools:ignore="Suspicious0dp" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/course"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="243dp"
                tools:ignore="Suspicious0dp,TextSizeCheck">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb11"
                    tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb27"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb34"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb46"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/rb5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb59"
                    tools:ignore="VisualLintButtonSize" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox1"
                tools:ignore="DuplicateSpeakableTextCheck,Suspicious0dp,VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/checkbox22"
                tools:ignore="Suspicious0dp,VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/checkbox35"
                tools:ignore="Suspicious0dp,VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="1dp"
                android:text="@string/as"
                tools:ignore="Suspicious0dp,VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox55"
                tools:ignore="Suspicious0dp,VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdc"
                tools:ignore="Suspicious0dp,VisualLintButtonSize" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="next"
                android:text="Next" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:onClick="submit"
                android:text="@string/submit" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="delete"
                android:text="@string/delete5" />

            <Button
                android:id="@+id/display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="display"
                android:text="@string/display4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/resultDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>